--- a/CSS/main.css
+++ b/CSS/main.css
@@ -1,6 +1,27 @@
+/* ****************************property option modification************************* */
+.property__option{
+    margin-top: 200px;
+}
+.property__option .container .extra-setting-h2::before{
+    content: '';
+    position: absolute;
+    width: 30px;
+    height: 4px;
+    background: var(--red-main);
+    bottom: 4px;
+    left: 0px;
+    transition: 0.5s ease-in-out;
+    clip-path: polygon(51% 10%, 80% 10%, 100% 35%, 100% 70%, 80% 90%, 51% 90%, 20% 90%, 0% 70%, 0% 35%, 20% 10%);
+}
+
+
+.property__option .container .extra-setting-h2:hover::before{
+    width: 370px;
+}
+
 /* ****************************residential-part************************* */
 .residential{
-    margin-top: 200px;
+    margin-top: 20px;
 }
 .residential .container h2{
     position: relative;
@@ -19,15 +40,73 @@
 .residential .container h2:hover::before{
     width: 555px;
 }
-/* .residential .container .wrapper .contentSection2{
-        margin: 36px 50px;
-        display: grid;
-    } */
-    .residential .container .wrapper .contentSection2 .mega-menu{
+.residential .container .additional-setting-h2::before{
+    content: '';
+    position: absolute;
+    width: 30px;
+    height: 4px;
+    background: var(--red-main);
+    bottom: 4px;
+    left: 0px;
+    transition: 0.5s ease-in-out;
+    clip-path: polygon(51% 10%, 80% 10%, 100% 35%, 100% 70%, 80% 90%, 51% 90%, 20% 90%, 0% 70%, 0% 35%, 20% 10%);
+}
+
+
+.residential .container .additional-setting-h2:hover::before{
+    width: 330px;
+}
+
+    :is(.residential .container .wrapper .contentSection2,.residential .container .wrapper .contentSection3) .mega-menu{
         margin-top: 0px;
         width: 100%;
     }
-    .residential .container .wrapper .contentSection2 ul {
+    /* :is(.residential .container .wrapper .contentSection2,.residential .container .wrapper .contentSection3) ul{
+        border-bottom: none;
+        overflow-y: scroll;
+        height: 110px;
+    }
+    :is(.residential .container .wrapper .contentSection2 ul,.residential .container .wrapper .contentSection3 ul) {
+        border-bottom: none;
+        overflow-y: scroll;
+        height: 110px;
+      }
+      :is(.residential .container .wrapper .contentSection2 ul::-webkit-scrollbar,.residential .container .wrapper .contentSection3 ul::-webkit-scrollbar){
+        width: 14px;
+      }
+      :is(.residential .container .wrapper .contentSection2 ul::-webkit-scrollbar-track,.residential .container .wrapper .contentSection3 ul::-webkit-scrollbar-track ){
+        background: var(--red-main);
+      }
+      :is(.residential .container .wrapper .contentSection2 ul::-webkit-scrollbar-thumb,.residential .container .wrapper .contentSection3 ul::-webkit-scrollbar-thumb){
+        background: var(--form-bg);
+        border-radius: 10px;
+        border: 0.2rem solid transparent;
+        background-clip: content-box;
+      } */
+
+
+      .residential .container .wrapper .contentSection3 .mega-menu{
+        margin-top: 0px;
+        width: 100%;
+    }
+    .residential .container .wrapper .contentSection3 ul {
+        border-bottom: none;
+        overflow-y: scroll;
+        height: 110px;
+      }
+      .residential .container .wrapper .contentSection3 ul::-webkit-scrollbar {
+        width: 14px;
+      }
+      .residential .container .wrapper .contentSection3 ul::-webkit-scrollbar-track {
+        background: var(--red-main);
+      }
+      .residential .container .wrapper .contentSection3 ul::-webkit-scrollbar-thumb {
+        background: var(--form-bg);
+        border-radius: 10px;
+        border: 0.2rem solid transparent;
+        background-clip: content-box;
+      }
+      .residential .container .wrapper .contentSection2 ul {
         border-bottom: none;
         overflow-y: scroll;
         height: 110px;
@@ -44,11 +123,23 @@
         border: 0.2rem solid transparent;
         background-clip: content-box;
       }
+      /* .residential .container .wrapper .contentSection2 ul::-webkit-scrollbar {
+        width: 14px;
+      }
+      .residential .container .wrapper .contentSection2 ul::-webkit-scrollbar-track {
+        background: var(--red-main);
+      }
+      .residential .container .wrapper .contentSection2 ul::-webkit-scrollbar-thumb {
+        background: var(--form-bg);
+        border-radius: 10px;
+        border: 0.2rem solid transparent;
+        background-clip: content-box;
+      } */
     /* .residential .container .wrapper .contentSection2 ul li{
         width: 25%;
         padding: 12px 24px 0 0;
     } */
-    .residential .container .wrapper .contentSection2 ul li a{
+    :is(.residential .container .wrapper .contentSection2 ul li a,.residential .container .wrapper .contentSection3 ul li a){
         font-family: var(--montserrat-regular-400-para);
         max-width: 100%;
         display: inline-block;
@@ -64,13 +155,36 @@
         transition: 0.5s ease-in-out;
         text-decoration: none;
     }
-    .residential .container .wrapper .contentSection2 ul li a:hover{
+    :is(.residential .container .wrapper .contentSection2 ul li a,.residential .container .wrapper .contentSection3 ul li a):hover{
         color: var(--m-hover-button);
         background: transparent;
         overflow: hidden;
     }
 
-.residential .container .wrapper ul{
+    /* .residential .container .wrapper .contentSection3 ul li a{
+        font-family: var(--montserrat-regular-400-para);
+        max-width: 100%;
+        display: inline-block;
+        color: var(--li-color);
+        font-size: var(--font-size16);
+        line-height: 20px;
+        text-transform: capitalize;
+        overflow: hidden;
+        background: transparent;
+        font-stretch: extra-condensed;
+        text-overflow: ellipsis;
+        white-space: nowrap;
+        transition: 0.5s ease-in-out;
+        text-decoration: none;
+    } */
+    /* .residential .container .wrapper .contentSection3 ul li a:hover{
+        color: var(--m-hover-button);
+        background: transparent;
+        overflow: hidden;
+    } */
+
+
+.residential .container .wrapper .con-ul{
     border-bottom: 1px solid var(--temp-head-col);
 }
 .residential .container .wrapper ul li a{
@@ -141,7 +255,7 @@
     margin-bottom: 20px;
 }
 .h4-set h4{
-    font-family: var(--montserrat-semibold-600-extra );
+    font-family: var(--montserrat-semibold);
     font-size: var(--font-size22);
     color: var(--para-tint-h4);
 }
