--- a/css/common.css
+++ b/css/common.css
@@ -683,7 +683,7 @@ font-size: var(--font-size16);
 	text-align: center;
     margin-top: 10px;
 }
-:is(.selectSection,.selectSection2,.selectSection3,.selectSection4) button {
+:is(.selectSection,.selectSection2,.selectSection3,.selectSection4,.selectSection5) button {
     font-family:var(--montserrat-medium-500-para) ;
     font-size: var(--font-size18);
     background: var(--form-bg);
@@ -703,7 +703,7 @@ font-size: var(--font-size16);
 .selectSection button{
     padding: 4px 0px !important;
 }
-:is(.selectSection,.selectSection2,.selectSection3,.selectSection4) button::before {
+:is(.selectSection,.selectSection2,.selectSection3,.selectSection4,.selectSection5) button::before {
     content: '';
     position: absolute;
     top: 0px;
@@ -714,11 +714,11 @@ font-size: var(--font-size16);
     border-top: 1px dashed var(--pure-white);
     transition: 0.5s ease-in-out;
 }
-:is(.selectSection,.selectSection2,.selectSection3,.selectSection4) button:hover::before {
+:is(.selectSection,.selectSection2,.selectSection3,.selectSection4,.selectSection5) button:hover::before {
     width: 100%;
     height: 100%;
 }
-:is(.selectSection,.selectSection2,.selectSection3,.selectSection4) button::after {
+:is(.selectSection,.selectSection2,.selectSection3,.selectSection4,.selectSection5) button::after {
     content: '';
     position: absolute;
     bottom: 0px;
@@ -729,12 +729,12 @@ font-size: var(--font-size16);
     border-bottom: 1px dashed var(--pure-white);
     transition: 0.5s ease-in-out;
 }
-:is(.selectSection,.selectSection2,.selectSection3,.selectSection4) button:hover::after {
+:is(.selectSection,.selectSection2,.selectSection3,.selectSection4,.selectSection5) button:hover::after {
     width: 100%;
     height: 100%;
     color: var(--pure-white);
 }
-:is(.selectSection,.selectSection2,.selectSection3,.selectSection4) button:hover {
+:is(.selectSection,.selectSection2,.selectSection3,.selectSection4,.selectSection5) button:hover {
 	cursor: pointer;
     color: var(--pure-white) !important;
     background: var(--red-main);
@@ -756,6 +756,13 @@ font-size: var(--font-size16);
     margin: 0 auto;
 }
 /* *********************bottom-menu-set**************************** */
+/* *********************option-css**************************** */
+
+.bottom-menu-set{
+    display: flex;
+}
+/* *********************option-css ednded**************************** */
+
 .bottom-menu-set .menu-main{
     background: var(--pure-white);
     padding:0px 16px 0px 16px;
@@ -825,95 +832,7 @@ font-size: var(--font-size16);
     color: var(--pure-white) !important;
 }
 
-/* *********************bottom-menu-set**************************** */
-/* .major-part{
-    display: flex !important;
-    justify-content: flex-start;
-    align-items: center;
-    gap: 0px 20px;
-} */
-/* .mega-block{
-    width: 100%;
-    padding-left: 20px;
-} */
-.jumbo{
-    margin-top: 200px;
-}
-.jumbo .container .wrapper .jumbo__box{
-    background-color: var(--form-bg);
-    border-radius: 16px;
-    padding: 22px;
-    border: 1px solid var(--pure-white);
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    flex-wrap: wrap;
-}
-.jumbo .container .wrapper .jumbo__box .jumbo__box__left h2{
-    font-family: 'Montserrat', sans-serif;
-    font-size: var(--font-size36);
-    color: var(--dark-color);
-    letter-spacing: 1px;
-    text-transform: capitalize;
-}
-.jumbo .container .wrapper .jumbo__box .jumbo__box__left h2 span{
-    font-family: 'Damion', cursive;
-    font-size: var(--font-size36);
-    color: var(--dark-color);
-    font-stretch: 10px;
-    letter-spacing: 2px;
-}
-.jumbo .container .wrapper .jumbo__box .jumbo__box__left h5{
-    font-family: 'Montserrat', sans-serif;
-    font-size: var(--font-size20);
-    padding: 5px 0px 10px;
-    color: var(--para-dark-h2);
-}
-.jumbo .container .wrapper .jumbo__box .jumbo__box__left h5 span{
-    font-family: 'Montserrat', sans-serif;
-    font-size: var(--font-size20);
-    padding: 5px 0px 10px;
-    background: var(--text-suppot);
-    text-transform: capitalize;
-    letter-spacing: 1px;
-    background:var(--text-suppot);
-   -webkit-background-clip: text;
-   -webkit-text-fill-color: transparent;
-    color: var(--para-dark-h2);
-}
-.jumbo .container .wrapper .jumbo__box .jumbo__box__fa-pull-right .btn-setting{
-    padding: 17px 50px 17px 17px !important;
-    width: 230px;
-    border: 3px solid var(--pure-white);
-    color: var(--pure-white);
-    font-size: var(--font-size18);
-    text-align: left;
-    border-radius: 30px;
-    text-transform: capitalize;
-    outline: none;
-    box-shadow: none;
-    position: relative;
-    cursor: pointer;
-    background: var(--dark-blue-op);
-    transition: 0.5s ease-in-out;
-    /* --dark-blue-op */
-}
-.jumbo .container .wrapper .jumbo__box .jumbo__box__fa-pull-right .btn-setting:hover{
-    background: var(--m-hover-button);
-    transform: translateY(-3px);
-    box-shadow: var(--box-shadow);
-}
-.jumbo .container .wrapper .jumbo__box .jumbo__box__fa-pull-right .btn-setting span{
-    position: absolute;
-    top: 19px;
-    right: 23px;
-    padding: 4px 12px;
-    transition: 0.5s ease-in-out;
-}
-.jumbo .container .wrapper .jumbo__box .jumbo__box__fa-pull-right .btn-setting span:hover{
-    background: var(--form-bg);
-    color: var(--dark-color);
-}
+/* *********************modal-setting**************************** */
 .fa-user,.fa-lock,.fa-envelope,.fa-message,.fa-file{
     padding-right: 8px !important;
     color: var(--red-main);
