--- a/css/main.css
+++ b/css/main.css
@@ -10,6 +10,10 @@
     padding: 30px;
     margin-bottom: 0px;
 }
+.counter__setting .container .wrapper .counter__text h2{
+    color: var(--dark-blue-op);
+    text-shadow: 0px 0px 2px var(--dark-color);
+}
 /* .counter__setting .container .wrapper .counter__text p{
     text-overflow: ellipsis;
 } */
